[gd_scene load_steps=4 format=2]

[ext_resource path="res://ScenesAndScripts/Mob/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://InitialTests/BasicPotentialField.gd" type="Script" id=2]
[ext_resource path="res://ScenesAndScripts/Player/Player.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 566, 235 )

[node name="Line2D" type="Line2D" parent="."]
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]

[node name="Mob" parent="." instance=ExtResource( 1 )]
position = Vector2( -60, 5 )

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
